--- a/yueting/src/main/res/values/colors.xml
+++ b/yueting/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3f76b5</color>
+    <color name="colorPrimaryDark">#00303f9f</color>
+    <color name="colorAccent">#aa4053ff</color>
     <color name="colorTabBackground">#e727e90e</color>
 </resources>
