--- a/yueting/src/main/res/yueting/common/layout/activity_yueting.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_yueting.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/ll_tab_title"
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:text="设置"/>
+            android:text="设置" />
 
         <RadioGroup
             android:id="@+id/rg_anim_tab"
@@ -43,7 +43,7 @@
                 android:paddingTop="5dp"
                 android:text="首页"
                 android:textColor="@color/main_selector_tab_text"
-                android:textSize="15dp"/>
+                android:textSize="15dp" />
 
             <RadioButton
                 android:id="@+id/rb_tab_anim"
@@ -57,7 +57,7 @@
                 android:paddingTop="5dp"
                 android:text="悦读"
                 android:textColor="@color/main_selector_tab_text"
-                android:textSize="15dp"/>
+                android:textSize="15dp" />
 
             <RadioButton
                 android:id="@+id/rb_tab_chat"
@@ -71,7 +71,7 @@
                 android:paddingTop="5dp"
                 android:text="音乐"
                 android:textColor="@color/main_selector_tab_text"
-                android:textSize="15dp"/>
+                android:textSize="15dp" />
 
         </RadioGroup>
         <!--以后替换成图-->
@@ -83,65 +83,57 @@
             android:gravity="center"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:text="本地"/>
+            android:text="本地" />
     </LinearLayout>
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
         <FrameLayout
             android:id="@+id/fl_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_above="@+id/ll_play_control" />
 
         <LinearLayout
             android:id="@+id/ll_play_control"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:paddingBottom="10dp"
-            android:background="@drawable/layout_ripple_music"
+            android:layout_alignParentBottom="true"
+            android:background="#9eec8484"
+            android:orientation="horizontal"
             android:visibility="gone"
-            android:orientation="horizontal">
+            tools:visibility="visible">
 
             <ImageView
                 android:id="@+id/iv_album_picture"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/ic_launcher_round"/>
+                android:src="@mipmap/ic_launcher_round" />
 
-            <LinearLayout
-                android:id="@+id/ll_to_play"
+            <TextView
+                android:id="@+id/tv_music_info"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tv_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="这是歌的名字"
-                    android:textSize="20dp"/>
-
-                <TextView
-                    android:id="@+id/tv_artist_album"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="这是歌手和唱片的名字"
-                    android:textSize="12dp"/>
-            </LinearLayout>
+                android:ellipsize="marquee"
+                android:gravity="center_vertical"
+                android:lineSpacingExtra="4dp"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:maxLines="2"
+                android:onClick="onClick"
+                android:scrollHorizontally="true"
+                android:text="这是歌的名字"
+                android:textSize="18dp" />
 
             <TextView
                 android:id="@+id/tv_previous"
@@ -152,20 +144,19 @@
                 android:onClick="onClick"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:text="上"
-                />
+                android:text="上" />
 
             <TextView
                 android:id="@+id/tv_play_control"
                 android:layout_width="30dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
+                android:background="@drawable/layout_ripple_music"
                 android:gravity="center"
                 android:onClick="onClick"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:text="播"
-                />
+                android:text="播" />
 
             <TextView
                 android:id="@+id/tv_next"
@@ -176,11 +167,9 @@
                 android:onClick="onClick"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:text="下"
-                />
-
+                android:text="下" />
         </LinearLayout>
-    </FrameLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
