--- a/yueting/src/main/res/yueting/common/layout/notification_foreground.xml
+++ b/yueting/src/main/res/yueting/common/layout/notification_foreground.xml
@@ -1,46 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/iv_album_picture"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher_round"
-        />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:scaleType="fitCenter"
+        android:src="@mipmap/ic_launcher_round" />
+
+    <TextView
+        android:id="@+id/tv_music_info"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="这是歌的名字"
-            android:textSize="20dp"/>
-
-        <TextView
-            android:id="@+id/tv_artist_album"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="这是歌手和唱片的名字"
-            android:textSize="12dp"/>
-    </LinearLayout>
+        android:ellipsize="marquee"
+        android:gravity="center_vertical"
+        android:lineSpacingExtra="4dp"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:maxLines="2"
+        android:onClick="onClick"
+        android:scrollHorizontally="true"
+        android:text="这是歌的名字"
+        android:textSize="18dp" />
 
     <TextView
         android:id="@+id/tv_play_control"
@@ -50,8 +39,7 @@
         android:gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="播"
-        />
+        android:text="播" />
 
     <TextView
         android:id="@+id/tv_next"
@@ -61,8 +49,7 @@
         android:gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="下"
-        />
+        android:text="下" />
 
     <TextView
         android:id="@+id/tv_finish"
@@ -72,6 +59,5 @@
         android:gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="结"
-        />
+        android:text="结" />
 </LinearLayout>
