--- a/yueting/src/main/res/yueting/common/layout/layout_yueting_header.xml
+++ b/yueting/src/main/res/yueting/common/layout/layout_yueting_header.xml
@@ -75,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:gravity="center"
+        android:onClick="onClick"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:text="本地" />
