--- a/yueting/src/main/res/yueting/common/layout/activity_play.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_play.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:yueting="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.aqrlei.graduation.yueting.ui.PlayActivity">
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             xmlns:yueting="http://schemas.android.com/apk/res-auto"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context="com.aqrlei.graduation.yueting.ui.PlayActivity">
 
-    <com.aqrlei.graduation.yueting.TestView
-        android:id="@+id/tv_hello"
+    <com.aqrairsigns.aqrleilib.view.VisualizerView
+        android:id="@+id/vv_play"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#76a1d4"
         yueting:layout_constraintBottom_toBottomOf="@+id/ll_play_control"
         yueting:layout_constraintLeft_toLeftOf="parent"
         yueting:layout_constraintRight_toRightOf="parent"
-        yueting:layout_constraintTop_toTopOf="parent" />
+        yueting:layout_constraintTop_toTopOf="parent"
+        yueting:useMultiColor="true"/>
 
     <LinearLayout
         android:id="@+id/ll_play_control"
@@ -33,7 +35,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_launcher_round" />
+            android:src="@mipmap/ic_launcher_round"/>
 
         <TextView
             android:id="@+id/tv_music_info"
@@ -51,7 +53,7 @@
             android:onClick="onClick"
             android:scrollHorizontally="true"
             android:text="这是歌的名字"
-            android:textSize="18dp" />
+            android:textSize="18dp"/>
 
         <TextView
             android:id="@+id/tv_play_type"
@@ -62,7 +64,7 @@
             android:onClick="onClick"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="表" />
+            android:text="表"/>
 
         <TextView
             android:id="@+id/tv_previous"
@@ -73,7 +75,7 @@
             android:onClick="onClick"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="上" />
+            android:text="上"/>
 
         <FrameLayout
             android:layout_width="wrap_content"
@@ -88,7 +90,7 @@
                 yueting:radius="12dp"
                 yueting:rotateDegree="180"
                 yueting:roundWidth="3dp"
-                yueting:useGradientGolor="true" />
+                yueting:useGradientGolor="true"/>
 
             <TextView
                 android:id="@+id/tv_play_control"
@@ -99,7 +101,7 @@
                 android:onClick="onClick"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:text="播" />
+                android:text="播"/>
         </FrameLayout>
 
 
@@ -112,7 +114,7 @@
             android:onClick="onClick"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="下" />
+            android:text="下"/>
     </LinearLayout>
 
 
