--- a/yueting/src/main/res/yueting/common/layout/activity_play.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_play.xml
@@ -1,31 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             xmlns:yueting="http://schemas.android.com/apk/res-auto"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             tools:context="com.aqrlei.graduation.yueting.ui.PlayActivity">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:yueting="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.aqrlei.graduation.yueting.ui.PlayActivity">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#FFFFFF">
+
+        <ImageView
+            android:id="@+id/iv_back"
+            style="@style/TitleBarImageViewStyle"
+            android:onClick="onClick"
+            />
+
+        <TextView
+            style="@style/TitleBarTextViewStyle"
+            android:text="播放中"/>
+    </FrameLayout>
 
     <com.aqrairsigns.aqrleilib.view.VisualizerView
         android:id="@+id/vv_play"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#76a1d4"
-        yueting:layout_constraintBottom_toBottomOf="@+id/ll_play_control"
-        yueting:layout_constraintLeft_toLeftOf="parent"
-        yueting:layout_constraintRight_toRightOf="parent"
-        yueting:layout_constraintTop_toTopOf="parent"
-        yueting:useMultiColor="true"/>
+        yueting:scaleTime="10"
+        yueting:useMultiColor="true"
+        yueting:vRadius="100dp"
+        yueting:offSetX="64"
+
+        yueting:scaleStyle="center"/>
 
     <LinearLayout
         android:id="@+id/ll_play_control"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#9eec8484"
-        android:orientation="horizontal"
-        yueting:layout_constraintBottom_toBottomOf="parent"
-        yueting:layout_constraintLeft_toLeftOf="parent"
-        yueting:layout_constraintRight_toRightOf="parent">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_album_picture"
@@ -118,4 +135,4 @@
     </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
