--- a/yueting/src/main/res/yueting/common/layout/activity_read.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_read.xml
@@ -6,11 +6,12 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_gravity="center"
         android:text="ReadActivity"
         android:textSize="25sp"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <com.aqrairsigns.aqrleilib.view.PageView
         android:id="@+id/pv_read"
