--- a/yueting/src/main/res/yueting/home/layout/listitem_title.xml
+++ b/yueting/src/main/res/yueting/home/layout/listitem_title.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_title_item"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_title_name"
@@ -14,6 +15,6 @@
         android:drawableRight="@mipmap/ic_launcher_round"
         android:padding="5dp"
         android:textSize="20dp"
-        tools:text="悦读"/>
+        tools:text="悦读" />
 
 </LinearLayout>
