--- a/yueting/src/main/res/yueting/read/layout/read_item_progress.xml
+++ b/yueting/src/main/res/yueting/read/layout/read_item_progress.xml
@@ -20,13 +20,13 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/tv_done"
+        android:id="@+id/tv_done_percent"
         android:layout_width="wrap_content"
-        android:text="*"
+        android:text="00.0%"
         android:onClick="onClick"
         android:padding="5dp"
         android:gravity="center"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:textColor="#a6cc10"
         android:layout_height="40dp" />
 
