#update - afternoon- progress && lightDegree && background

--- a/yueting/src/main/res/values/colors.xml
+++ b/yueting/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#00303f9f</color>
     <color name="colorAccent">#aa4053ff</color>
     <color name="colorTabBackground">#e727e90e</color>
+    <color name="colorPageGreen">#ffc7eece</color>
+    <color name="colorPageYellow">#ffdda335</color>
+    <color name="colorPageWhite">#FFFFFFF0</color>
+    <color name="colorPageGrey">#FF666666</color>
 </resources>
